--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -9,7 +9,7 @@
     <meta name="description"
           content="Connect with commuters who share your route and schedule, reducing costs and environmental impact. Join our platform today to find your next lift club.">
     <link rel="shortcut icon" href="/images/workrideclublogo.png"/>
-    <title>Work Ride Club</title>
+    <title>Work Ride</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|PT+Serif:700" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -50,7 +50,7 @@
     <main>
         <section class="hero text-light text-center">
             <div class="container-sm">
-                <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride Club</h1>
+                <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride</h1>
                 <!-- Sign up form -->
                 <section class="signup">
                     <div class="container">
@@ -105,7 +105,7 @@
                         </a>
                     </li>
                 </ul>
-                <div class="footer-copyright">&copy; 2023 Work Ride Club, all rights reserved</div>
+                <div class="footer-copyright">&copy; 2023 Work Ride, all rights reserved</div>
             </div>
         </div>
     </footer>
