--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
           content="Connect with commuters who share your route and schedule, reducing costs and environmental impact. Join our platform today to find your next lift club.">
     <link rel="shortcut icon" href="/images/workrideclublogo.png"/>
-    <title>Work Ride Club</title>
+    <title>Work Ride</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|PT+Serif:700" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -51,7 +51,7 @@
         <section class="hero text-light text-center">
             <div class="container-sm">
                 <div class="hero-inner">
-                    <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride Club</h1>
+                    <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride</h1>
                     <p class="hero-paragraph is-revealing">Connect with commuters who share your route and schedule,
                         reducing costs and environmental impact. Join our platform today to find your next lift
                         club.</p>
@@ -69,7 +69,7 @@
         <div class="features-extended-inner section-inner has-top-divider">
             <div class="features-extended-header text-center">
                 <div class="container-sm">
-                    <h2 class="section-title mt-0">Meet Work Ride Club</h2>
+                    <h2 class="section-title mt-0">Meet Work Ride</h2>
                     <p class="section-paragraph">Connect with commuters who share your route and schedule, reducing
                         costs and environmental impact. Join our platform today to find your next lift club.</p>
                 </div>
@@ -137,7 +137,7 @@
                     </a>
                 </li>
             </ul>
-            <div class="footer-copyright">&copy; 2023 Work Ride Club, all rights reserved</div>
+            <div class="footer-copyright">&copy; 2023 Work Ride, all rights reserved</div>
         </div>
     </div>
 </footer>
