--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
     <meta name="description"
           content="Connect with commuters who share your route and schedule, reducing costs and environmental impact. Join our platform today to find your next lift club.">
     <link rel="shortcut icon" href="/images/workrideclublogo.png"/>
-    <title>Work Ride Club</title>
+    <title>Work Ride</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|PT+Serif:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
@@ -58,7 +58,7 @@
     <main>
         <section class="hero text-light text-center">
             <div class="container-sm">
-                <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride Club</h1>
+                <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride</h1>
                 <!-- Sign up form -->
                 <section class="signup">
                     <div class="container">
@@ -101,6 +101,7 @@
                                     </div>
                                     <div class="form-group form-button">
                                         <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
+                                        <div id="spinner" class="spinner" style="display: none">Loading...</div>
                                     </div>
                                 </form>
                             </div>
@@ -149,7 +150,7 @@
                         </a>
                     </li>
                 </ul>
-                <div class="footer-copyright">&copy; 2023 Work Ride Club, all rights reserved</div>
+                <div class="footer-copyright">&copy; 2023 Work Ride, all rights reserved</div>
             </div>
         </div>
     </footer>
