--- a/templates/matched.html
+++ b/templates/matched.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-    <script type="module" src="/js/admin.js"></script>
+    <script type="module" src="/js/admin_matched.js"></script>
 </head>
 <body>
 
@@ -23,11 +23,15 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Email</th>
-        <th scope="col">Home</th>
-        <th scope="col">Work</th>
+        <th scope="col">Driver</th>
+        <th scope="col">Passenger</th>
+        <th scope="col">D Home</th>
+        <th scope="col">D Work</th>
+        <th scope="col">P Home</th>
+        <th scope="col">P Work</th>
+        <th scope="col">+Mins</th>
+        <th scope="col">D Status</th>
+        <th scope="col">P Status</th>
     </tr>
     </thead>
     <tbody id="commuters-tbody">
