--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -30,6 +30,7 @@
         <th scope="col">Email</th>
         <th scope="col">Home</th>
         <th scope="col">Work</th>
+        <th scope="col">Time</th>
     </tr>
     </thead>
     <tbody id="commuters-tbody">
