--- a/templates/matched.html
+++ b/templates/matched.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Bootstrap Example</title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords"
-          content="Work commute carpool, Ride-sharing for commuters, Carpooling app for work, Lift club app for commuters, Join a carpool for work, Work carpooling service, Commuter ride-sharing, Find a work commute buddy, Share rides to work, Carpool network for employees, Sustainable commuting solutions, Save on commuting costs, Reduce carbon footprint commuting, Daily commute sharing, Commute carpool matching, Eco-friendly work travel, Carpool to the office, Share work rides, Daily commute carpool app, Work commute ride-share platform">
-    <meta name="description"
-          content="Connect with commuters who share your route and schedule, reducing costs and environmental impact. Join our platform today to find your next lift club.">
-    <link rel="shortcut icon" href="/images/workrideclublogo.png"/>
-    <title>Work Ride</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|PT+Serif:700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <script type="module" src="/js/admin.js"></script>
     <script type="module" src="/js/admin_matched.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/drivers">Drivers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/passengers">Passengers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/matched">Matched</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        Filter By Driver
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="driver-ul"></ul>
+</div>
 
 <table class="table">
     <thead>
@@ -50,6 +65,5 @@
     </div>
 </div>
 <script src="/js/main.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
