--- a/templates/matched.html
+++ b/templates/matched.html
@@ -8,6 +8,7 @@
     <title>Work Ride</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="/css/table.css" rel="stylesheet" >
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script type="module" src="/js/admin.js"></script>
@@ -37,6 +38,7 @@
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="driver-ul"></ul>
 </div>
 
+<div class="tableFixHead">
 <table class="table">
     <thead>
     <tr>
@@ -55,7 +57,7 @@
 
     </tbody>
 </table>
-
+</div>
 <div class="toast-container position-fixed top-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
