--- a/templates/single_match.html
+++ b/templates/single_match.html
@@ -45,6 +45,7 @@
                     Change Status
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="driver-ul">
+                    <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-contacted"  data-status="contacted">Contacted</a></li>
                     <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-pending" data-status="pending">Pending</a></li>
                     <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-rejected"  data-status="rejected">Rejected</a></li>
                     <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-accepted"  data-status="accepted">Accepted</a></li>
@@ -64,7 +65,8 @@
                     Change Status
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="passenger-ul">
-                    <li><a class="dropdown-item li-passenger-status" href="javascript:void(0)" id="passengerr-status-pending" data-status="pending">Pending</a></li>
+                    <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="passenger-status-contacted"  data-status="contacted">Contacted</a></li>
+                    <li><a class="dropdown-item li-passenger-status" href="javascript:void(0)" id="passenger-status-pending" data-status="pending">Pending</a></li>
                     <li><a class="dropdown-item  li-passenger-status" href="javascript:void(0)" id="passenger-status-rejected" data-status="rejected">Rejected</a></li>
                     <li><a class="dropdown-item li-passenger-status" href="javascript:void(0)" id="passenger-status-accepted" data-status="accepted">Accepted</a></li>
                 </ul>
