--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -32,18 +32,21 @@
     </div>
 </nav>
 
-
+<button class='btn btn-primary' id="match-all-drivers">Match All Drivers</button>
 
 <table class="table">
     <thead>
     <tr>
         <th scope="col">ID</th>
+        <th scope="col">Created</th>
         <th scope="col">Name</th>
         <th scope="col">Phone</th>
-        <th scope="col">Email</th>
         <th scope="col">Home</th>
         <th scope="col">Work</th>
+        <th scope="col">Last Match</th>
         <th scope="col">Time</th>
+        <th scope="col">Travel</th>
+        <th scope="col">Match</th>
     </tr>
     </thead>
     <tbody id="commuters-tbody">
@@ -61,6 +64,7 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/main.min.js"></script>
 </body>
 </html>
