--- a/templates/passengers.html
+++ b/templates/passengers.html
@@ -8,13 +8,14 @@
     <title>Work Ride</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <link href="/css/table.css" rel="stylesheet" >
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script type="module" src="/js/admin.js"></script>
-    <script type="module" src="/js/admin_matched.js"></script>
+    <script type="module" src="/js/admin_passengers.js"></script>
 </head>
 <body>
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -31,33 +32,25 @@
     </div>
 </nav>
 
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-        Filter By Driver
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="driver-ul"></ul>
-</div>
 
-<div class="tableFixHead">
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Driver</th>
-        <th scope="col">Passenger</th>
-        <th scope="col">D Home</th>
-        <th scope="col">P Home</th>
-        <th scope="col">D Work</th>
-        <th scope="col">P Work</th>
-        <th scope="col">+Mins</th>
-        <th scope="col">D Status</th>
-        <th scope="col">P Status</th>
+        <th scope="col">ID</th>
+        <th scope="col">Created</th>
+        <th scope="col">Name</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Home</th>
+        <th scope="col">Work</th>
+        <th scope="col">Last Match</th>
+        <th scope="col">Time</th>
     </tr>
     </thead>
     <tbody id="commuters-tbody">
 
     </tbody>
 </table>
-</div>
+
 <div class="toast-container position-fixed top-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
