--- a/templates/passengers.html
+++ b/templates/passengers.html
@@ -43,6 +43,7 @@
         <th scope="col">Home</th>
         <th scope="col">Work</th>
         <th scope="col">Last Match</th>
+        <th scope="col">Status</th>
         <th scope="col">Time</th>
     </tr>
     </thead>
