--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -44,6 +44,7 @@
         <th scope="col">Home</th>
         <th scope="col">Work</th>
         <th scope="col">Last Match</th>
+        <th scope="col">Status</th>
         <th scope="col">Time</th>
         <th scope="col">Travel</th>
         <th scope="col">Match</th>
