--- a/templates/matched.html
+++ b/templates/matched.html
@@ -31,7 +31,8 @@
     </div>
 </nav>
 
-<div class="dropdown m-1">
+<div class="row">
+<div class="dropdown m-1" >
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
         Filter By Driver
     </button>
@@ -49,7 +50,7 @@
         <li><a class="dropdown-item li-status-filter" href="#" data-status="passenger_rejected">Passenger Rejected</a></li>
     </ul>
 </div>
-
+</div>
 <div class="tableFixHead">
 <table class="table">
     <thead>
