--- a/templates/signup.html
+++ b/templates/signup.html
@@ -35,7 +35,7 @@
             <div class="site-header-inner">
                 <div class="brand header-brand">
                     <h1 class="m-0">
-                        <a href="#">
+                        <a href="/">
                             <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                                 <title>Evelyn</title>
                                 <defs>
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="site-footer-inner">
                 <div class="brand footer-brand">
-                    <a href="#">
+                    <a href="/">
                         <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                             <title>Evelyn</title>
                             <defs>
