--- a/templates/matched.html
+++ b/templates/matched.html
@@ -33,15 +33,15 @@
 
 <div class="row">
 <div class="dropdown m-1" >
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonDriver" data-bs-toggle="dropdown" aria-expanded="false">
         Filter By Driver
     </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="driver-ul"></ul>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonDriver" id="driver-ul"></ul>
 </div>
 
 <div class="dropdown m-1">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonStatus" data-bs-toggle="dropdown" aria-expanded="false">
-        Filter By Status
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonStatus" data-bs-toggle="dropdown" data-status="active" aria-expanded="false">
+        Active
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <li><a class="dropdown-item li-status-filter" href="#" data-status="active">Active</a></li>
