--- a/templates/passengers.html
+++ b/templates/passengers.html
@@ -20,17 +20,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/drivers">Drivers</a>
+                <a class="nav-link" href="/drivers0242ac120002">Drivers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/passengers">Passengers</a>
+                <a class="nav-link" href="/passengers0242ac120002">Passengers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/matched">Matched</a>
+                <a class="nav-link" href="/matched0242ac120002">Matched</a>
             </li>
         </ul>
     </div>
 </nav>
+
 
 
 <table class="table">
