--- a/templates/passengers.html
+++ b/templates/passengers.html
@@ -46,6 +46,7 @@
         <th scope="col">Last Match</th>
         <th scope="col">Status</th>
         <th scope="col">Time</th>
+        <th scope="col">Confirm</th>
     </tr>
     </thead>
     <tbody id="commuters-tbody">
