--- a/templates/signup.html
+++ b/templates/signup.html
@@ -70,7 +70,7 @@
                                 <form class="register-form" id="register-form">
                                     <div class="form-group">
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="commuterType" id="passenger" value="passenger" checked="checked">
+                                            <input class="form-check-input" type="radio" name="commuterType" id="passenger" value="passenger">
                                             <label class="form-check-label" id="passenger-label" for="passenger">Passenger</label>
                                         </div>
                                         <div class="form-check form-check-inline">
