--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script type="module" src="/js/admin.js"></script>
-    <script type="module" src="/js/admin_passengers.js"></script>
+    <script type="module" src="/js/admin_dashbord.js"></script>
 </head>
 <body>
 
@@ -35,27 +35,40 @@
     </div>
 </nav>
 
-
-
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Created</th>
-        <th scope="col">Name</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Home</th>
-        <th scope="col">Work</th>
-        <th scope="col">Last Match</th>
-        <th scope="col">Status</th>
-        <th scope="col">Time</th>
-        <th scope="col">Confirm</th>
-    </tr>
-    </thead>
-    <tbody id="commuters-tbody">
-
-    </tbody>
-</table>
+<div class="row">
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">New Drivers Today</p>
+                <h1 class="card-title" id="driversToday"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">Drivers 7 Days</p>
+                <h1 class="card-title" id="drivers7days"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">New Passengers Today</p>
+                <h1 class="card-title" id="passengersToday"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">Passengers 7 days</p>
+                <h1 class="card-title" id="passengers7days"></h1>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="toast-container position-fixed top-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
