--- a/templates/matched.html
+++ b/templates/matched.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/matched0242ac120002">Matched</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/dashboard0242ac120002">Dashboard</a>
+            </li>
         </ul>
     </div>
 </nav>
