--- a/templates/matched.html
+++ b/templates/matched.html
@@ -60,9 +60,9 @@
     <tr>
         <th scope="col">Driver</th>
         <th scope="col">Passenger</th>
-        <th scope="col">D Home</th>
-        <th scope="col">P Home</th>
+        <th scope="col">D Home -> </th>
         <th scope="col">D Work</th>
+        <th scope="col">P Home -> </th>
         <th scope="col">P Work</th>
         <th scope="col">+Mins</th>
         <th scope="col">Status</th>
