--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -68,6 +68,22 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">All Passengers</p>
+                <h1 class="card-title" id="allPassengers"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">All Drivers</p>
+                <h1 class="card-title" id="allDrivers"></h1>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="toast-container position-fixed top-0 end-0 p-3">
