--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/dashboard0242ac120002">Dashboard</a>
             </li>
+            <li class="nav-item">
+                <a target="_blank" class="nav-link" href="/signup0242ac120002">FB Signup</a>
+            </li>
         </ul>
     </div>
 </nav>
