--- a/templates/single_match.html
+++ b/templates/single_match.html
@@ -28,6 +28,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="/matched0242ac120002">Matched</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/dashboard0242ac120002">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a target="_blank" class="nav-link" href="/signup0242ac120002">FB Signup</a>
+            </li>
         </ul>
     </div>
 </nav>
