--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -38,6 +38,8 @@
     </div>
 </nav>
 
+<h1>Website</h1>
+
 <div class="row">
     <div class="col-sm-2">
         <div class="card">
@@ -84,6 +86,58 @@
             <div class="card-body text-center">
                 <p class="card-text">All Drivers</p>
                 <h1 class="card-title" id="allDrivers"></h1>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h1>Facebook</h1>
+<div class="row">
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">New Drivers Today</p>
+                <h1 class="card-title" id="fbDriversToday"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">Drivers 7 Days</p>
+                <h1 class="card-title" id="fbDrivers7days"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">New Passengers Today</p>
+                <h1 class="card-title" id="fbPassengersToday"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">Passengers 7 days</p>
+                <h1 class="card-title" id="fbPassengers7days"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">All Passengers</p>
+                <h1 class="card-title" id="allFBPassengers"></h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">All Drivers</p>
+                <h1 class="card-title" id="allFBDrivers"></h1>
             </div>
         </div>
     </div>
