--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
                     <li>
                         <a class="button button-sm button-shadow" href="/signup">Signup</a>
                     </li>
+                    <li style="margin-left: 1em">
+                        <a target="_blank" class="button button-sm button-shadow" href="/map">Map</a>
+                    </li>
                 </ul>
             </div>
         </div>
