--- a/templates/map.html
+++ b/templates/map.html
@@ -65,9 +65,63 @@
         display: none;
     }
 
+    .fixed-action-btn {
+        font-size: 2em;
+        position: fixed;
+        left: 20px;
+        bottom: 30px;
+        padding-top: 15px;
+        margin-bottom: 0;
+        z-index: 997;
+        -webkit-transition: -webkit-transform .2s ease-out,opacity .2s ease-out;
+        transition: transform .2s ease-out,opacity .2s ease-out;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-tap-highlight-color: transparent;
+    }
+    .fixed-action-btn.active ul {
+        visibility: visible;
+        opacity: 1;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+    .fixed-action-btn ul {
+        position: absolute;
+        bottom: 64px;
+        right: 23px;
+        margin: 0;
+        opacity: 0;
+        visibility: hidden;
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
+        -webkit-transition: opacity .2s,visibility .2s,-webkit-transform .2s;
+        transition: opacity .2s,visibility .2s,-webkit-transform .2s;
+        transition: opacity .2s,visibility .2s,transform .2s;
+        transition: opacity .2s,visibility .2s,transform .2s,-webkit-transform .2s;
+        z-index: 998;
+    }
+     .fixed-action-btn ul li {
+          margin-bottom: 15px;
+     }
+    .fixed-action-btn ul a.btn-floating {
+        opacity: 0;
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        -webkit-transition: -webkit-transform .2s ease-out,opacity .2s ease-out;
+        transition: transform .2s ease-out,opacity .2s ease-out;
+    }
+
+
     </style>
 </head>
 <body>
+<!--add floating button-->
+<div class="fixed-action-btn">
+    <a class="btn-floating btn-large red" href="/">
+        <i class="large material-icons">Work Ride Club</i>
+    </a>
+</div>
+<!--add floating button-->
 <div id="map"></div>
 
 <!--
