--- a/templates/map.html
+++ b/templates/map.html
@@ -68,7 +68,7 @@
     .fixed-action-btn {
         font-size: 2em;
         position: fixed;
-        left: 20px;
+        left: 8px;
         bottom: 30px;
         padding-top: 15px;
         margin-bottom: 0;
@@ -111,14 +111,23 @@
         transition: transform .2s ease-out,opacity .2s ease-out;
     }
 
+    .signup-button {
+        padding: 5px;
+        background: #4285F4;
+        border: 1px solid;
+        color: white;
+        border-radius: 8px;
+        text-decoration: none !important;
+    }
+
 
     </style>
 </head>
 <body>
 <!--add floating button-->
 <div class="fixed-action-btn">
-    <a class="btn-floating btn-large red" href="/">
-        <i class="large material-icons">Work Ride Club</i>
+    <a class="btn-floating btn-large red signup-button" href="/signup">
+        <i class="large material-icons">Join Now</i>
     </a>
 </div>
 <!--add floating button-->
