--- a/templates/signup.html
+++ b/templates/signup.html
@@ -59,6 +59,9 @@
         <section class="hero text-light text-center">
             <div class="container-sm">
                 <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride</h1>
+                <p class="hero-paragraph is-revealing" style="color: white">Connect with commuters who share your route and schedule,
+                    reducing costs and environmental impact. Join our platform today to find your next lift
+                    club.</p>
                 <!-- Sign up form -->
                 <section class="signup">
                     <div class="container">
