--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -51,6 +51,9 @@
         <section class="hero text-light text-center">
             <div class="container-sm">
                 <h1 class="hero-title h2-mobile mt-0 is-revealing">Work Ride</h1>
+
+                    <a target="_blank" class="button button-sm button-shadow" href="/map">View Map</a>
+
                 <!-- Sign up form -->
                 <section class="signup">
                     <div class="container">
