--- a/templates/map.html
+++ b/templates/map.html
@@ -119,7 +119,12 @@
     }
 
     .whatsapp{
-        margin-bottom: 1em;
+        padding: 5px;
+        background: white;
+        border: 1px solid;
+        color: #25D366;
+        border-radius: 8px;
+        text-decoration: none !important;
     }
     .whatsapp-icon{
         font-size: 1em;
@@ -143,14 +148,14 @@
 
 <!--add floating button-->
 <div class="fixed-action-btn">
-    <div style="display: block; margin-bottom:10px">
-        <a href="https://wa.me/27611111111?text=Hi%20I%20would%20like%20to%20join%20Work%20Ride" class="whatsapp signup-button"
+    <div style="display: block; margin-bottom:0.5em">
+        <a href="https://wa.me/27611111111?text=Hi%20I%20would%20like%20to%20join%20Work%20Ride" class="whatsapp"
            target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i>Whatsapp</a>
     </div>
 
     <div>
         <a class="btn-floating btn-large red signup-button" href="/signup">
-            <i class="large material-icons">Sign Up Now</i>
+            Sign Up Now
         </a>
     </div>
 
