--- a/templates/signup.html
+++ b/templates/signup.html
@@ -88,7 +88,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="phone-number"><i class="zmdi zmdi-smartphone-iphone"></i></label>
-                                        <input type="text" name="phonenumber" id="phone-number" placeholder="Phone number"/>
+                                        <input type="text" name="phonenumber" id="phone-number" placeholder="Whatsapp Number"/>
                                     </div>
                                     <div class="form-group">
                                         <label for="home_address"><i class="zmdi zmdi-map"></i></label>
