--- a/templates/passengers.html
+++ b/templates/passengers.html
@@ -52,7 +52,7 @@
         <th scope="col">Last Match</th>
         <th scope="col">Status</th>
         <th scope="col">Time</th>
-        <th scope="col">Confirm</th>
+        <th scope="col">unmatch</th>
     </tr>
     </thead>
     <tbody id="commuters-tbody">
