--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -143,6 +143,12 @@
     </div>
 </div>
 
+<div class="mt-2" style="width: 800px; height: 400px">
+    <canvas
+            id="lineChartRegistrations"
+    ></canvas>
+</div>
+
 <div class="toast-container position-fixed top-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
@@ -153,6 +159,11 @@
         </div>
     </div>
 </div>
+<script
+        src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"
+        integrity="sha384-gdQErvCNWvHQZj6XZM0dNsAoY4v+j5P1XDpNkcM3HJG1Yx04ecqIHk7+4VBOCHOG"
+        crossorigin="anonymous"
+></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/main.min.js"></script>
 </body>
