--- a/templates/single_match.html
+++ b/templates/single_match.html
@@ -54,6 +54,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="driver-ul">
                     <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-contacted"  data-status="contacted">Contacted</a></li>
                     <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-pending" data-status="pending">Pending</a></li>
+                    <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-blocked" data-status="blocked">Blocked</a></li>
                     <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-rejected"  data-status="rejected">Rejected</a></li>
                     <li><a class="dropdown-item li-driver-status" href="javascript:void(0)" id="driver-status-accepted"  data-status="accepted">Accepted</a></li>
                 </ul>
