--- a/public/css/table.css
+++ b/public/css/table.css
@@ -5,3 +5,15 @@
 table  { border-collapse: collapse; width: 90%; }
 th, td { padding: 8px 16px; }
 th     { background-color: gainsboro !important; }
+
+.contacted{
+    background-color: #fcba03 !important;
+}
+
+.accepted {
+    background-color: #98db6e !important;
+}
+
+.blocked {
+    background-color: #98db6e !important;
+}
