--- a/public/css/table.css
+++ b/public/css/table.css
@@ -15,5 +15,5 @@ th     { background-color: gainsboro !important; }
 }
 
 .blocked {
-    background-color: #98db6e !important;
+    background-color: #a84632 !important;
 }
