--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -41,7 +41,7 @@
 </nav>
 
 
-<button class='btn btn-primary' id="match-all-drivers">Match All Drivers</button>
+<!--<button class='btn btn-primary' id="match-all-drivers">Match All Drivers</button>-->
 
 <table class="table">
     <thead>
