--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -89,6 +89,14 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text">Unmatched</p>
+                <h1 class="card-title" id="unmatched"></h1>
+            </div>
+        </div>
+    </div>
 </div>
 
 <h1>Facebook</h1>
