--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -92,7 +92,7 @@
     <div class="col-sm-2">
         <div class="card">
             <div class="card-body text-center">
-                <p class="card-text">Unmatched</p>
+                <p class="card-text">Matched</p>
                 <h1 class="card-title" id="unmatched"></h1>
             </div>
         </div>
