--- a/templates/signup.html
+++ b/templates/signup.html
@@ -104,7 +104,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="work_departure_time"><i class="zmdi zmdi-time"></i></label>
-                                        <input type="text" name="work_departure_time" id="work_departure_time" placeholder="Home Departure Time"/>
+                                        <input type="text" name="work_departure_time" id="work_departure_time" placeholder="Work Departure Time"/>
                                     </div>
                                     <div class="form-group">
                                         <label for="fuel_contribution"><i class="zmdi zmdi-money"></i></label>
